<resources>
    <string name="app_name">CICO</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="log">log</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="food">Food</string>
    <string name="kcal">kcal</string>
    <string name="total">Total</string>
    <string name="kcal_g">kcal/100g</string>
    <string name="grams">g</string>
    <string name="portion">Portion</string>
    <string name="fillerNum">420</string>
    <string name="fillerText">Lorem Ipsum</string>
    <string name="no_settings">I don\'t have any settings</string>
</resources>