<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/textViewAddFoodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="8dp"
        android:text="@string/fillerText"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/portionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddFoodTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewAddFoodTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddFoodTitle">

        <TextView
            android:id="@+id/textViewPortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/portion"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editTextPortion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="number"
            android:minEms="3"
            android:padding="8dp"
            android:typeface="monospace" />


        <TextView
            android:id="@+id/textViewAddUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/grams"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearKcalTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/textViewAddFoodTitle"
        app:layout_constraintStart_toStartOf="@id/textViewAddFoodTitle"
        app:layout_constraintTop_toBottomOf="@+id/portionLayout">

        <TextView
            android:id="@+id/textViewKcalPortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/fillerNum"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <TextView
            android:id="@+id/textViewKcalHeader"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/kcal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="8dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>